<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="0dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:contentPadding="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/bookTv"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="18sp"

            android:textStyle="bold" />


        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookTv"
            android:layout_marginTop="5dp"
            android:text="@string/book_description"
            android:textSize="14sp" />


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/descriptionTv"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/star_yellow"
            android:foregroundTint="@color/star_yellow"
            android:progressBackgroundTint="@color/silver"
            android:progressTint="@color/star_yellow"
            android:saveEnabled="true"
            android:scaleX=".5"
            android:scaleY=".5"
            android:soundEffectsEnabled="true"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp" />


        <ImageView
            android:id="@+id/bookIv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_image" />

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_button"
            android:src="@drawable/ic_edit_color" />

        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:layout_marginEnd="40dp"
            android:layout_toEndOf="@id/editBtn"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/ic_delete_color" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>